# server/app/routes/api/surgery.ts
@@ -8,28 +8,39 @@ import { body, param, query } from 'express-validator';
 import prisma from '../../modules/prisma';
 
 // IMPORTS
-import { validation, authValidation, diseaseValidation, nightValidation } from '../../middlewares/validation';
+import { validation, authValidation, diseaseValidation, nightValidation, surgeryValidation } from '../../middlewares/validation';
 import { authNZ } from '../../middlewares/passport';
 
 import { patchUser, newUser } from '../../services/auth';
 import { Provider, Role } from '@prisma/client';
 import { AuthPermissions } from '../../config/authPermissions';
+import errorMsg from '../../config/errorMsg';
 
 
 router.post('/new',
-  // #swagger.tags = ['Night']
-  // #swagger.path = '/night/new'
+  // #swagger.tags = ['Surgery']
+  // #swagger.path = '/surgery/new'
 
-  nightValidation.date(body('date')),
-  nightValidation.capacity(body('capacity')),
+  surgeryValidation.date(body('date')),
+  surgeryValidation.capacity(body('capacity')),
+  diseaseValidation.id(body('disease')),
   validation,
 
   async (req, res, next) => {
     try {
-      const nigth = await prisma.night.create({
-        data: {date: new Date(req.body.date), capacity: parseInt(req.body.capacity)}
-      });
-      return res.json(nigth);
+      const surgery = await prisma.surgery.create({
+        data: {
+          date: new Date(req.body.date),
+          capacity: parseInt(req.body.capacity),
+          disease: {
+            connect: {id: req.body.disease}
+          }
+        },
+        include: {
+          disease: true,
+        }
+      })
+      return res.json(surgery);
     } catch (error: any) {
       if (error.code == 'P2002') return res.sendStatus(409);
       return next(error);
@@ -37,56 +48,65 @@ router.post('/new',
   });
 
 router.get('/id/:id',
-  // #swagger.tags = ['Night']
-  // #swagger.path = '/night/id/{id}'
+  // #swagger.tags = ['Surgery']
+  // #swagger.path = '/surgery/id/{id}'
 
-  nightValidation.id(param('id')),
+  surgeryValidation.id(param('id')),
   validation,
 
   handleError(async (req, res, next) => {
-      const night = await prisma.night.findUnique({where: {id: parseInt(req.params.id)}});
-      if (!night) return void res.sendStatus(404);
-      return void res.json(night);
+      const surgery = await prisma.surgery.findUnique({where: {id: parseInt(req.params.id)}});
+      if (!surgery) return void res.sendStatus(404);
+      return void res.json(surgery);
   }));
 
 router.get('/find',
-  // #swagger.tags = ['Night']
-  // #swagger.path = '/night/find'
+  // #swagger.tags = ['Surgery']
+  // #swagger.path = '/surgery/find'
   // #swagger.parameters['date_start'] = {required: true }
   // #swagger.parameters['date_end'] = {required: true } 
 
-  nightValidation.date(query('date_start')).optional(),
-  nightValidation.date(query('date_end')).optional(),
+  surgeryValidation.date(query('date_start')).optional(),
+  surgeryValidation.date(query('date_end')).optional(),
   validation,
 
   async (req, res, next) => {
     try {
-      const nights = await prisma.night.findMany({where: {
+      const surgeries = await prisma.surgery.findMany({where: {
         date: {
           lte: req.query.date_end ? new Date(String(req.query.date_end)) : undefined,
           gte: req.query.date_start ? new Date(String(req.query.date_start)) : undefined,
         },
       }});
-      return res.json(nights);  
+      return res.json(surgeries);  
     } catch (error) {
       next(error)
     }  
   });
 
 router.patch('/id/:id',
-  // #swagger.tags = ['Night']
-  // #swagger.path = '/night/id/{id}'
+  // #swagger.tags = ['Surgery']
+  // #swagger.path = '/surgery/id/{id}'
 
-  nightValidation.id(param('id')),
-  nightValidation.capacity(body('capacity')),
+  surgeryValidation.id(param('id')),
+  surgeryValidation.capacity(body('capacity')),
+  diseaseValidation.id(body('disease')),
   validation,
 
   async (req, res, next) => {
     try {
-      const night = await prisma.night.update({
+      const disease = await prisma.disease.findUnique({where: {id: req.params.id}});
+      if (!disease) return void res.status(404).json({err: errorMsg.disease.unknown});
+
+      const surgery = await prisma.surgery.update({
         where: {id: parseInt(req.params.id)},
-        data: {capacity: parseInt(req.body.capacity)}});
-      return res.json(night);
+        data: {
+          capacity: parseInt(req.body.capacity),
+          disease: {
+            connect: {id: req.body.disease}
+          }
+        }});
+      return res.json(surgery);
     } catch (error: any) {
       if (error.code == 'P2025') return res.sendStatus(404);
       return next(error);
@@ -94,15 +114,15 @@ router.patch('/id/:id',
   });
 
 router.delete('/id/:id',
-  // #swagger.tags = ['Night']
-  // #swagger.path = '/night/id/{id}'
+  // #swagger.tags = ['Surgery']
+  // #swagger.path = '/surgery/id/{id}'
 
-  nightValidation.id(param('id')),
+  surgeryValidation.id(param('id')),
   validation,
 
   async (req, res, next) => {
     try {
-      const nigth = await prisma.night.delete({where: {id: parseInt(req.params.id)}});
+      const surgery = await prisma.surgery.delete({where: {id: parseInt(req.params.id)}});
       return res.send();
 
     } catch (error: any) { 
@@ -112,28 +132,30 @@ router.delete('/id/:id',
   });
 
 router.get('/available',
-  // #swagger.tags = ['Night']
-  // #swagger.path = '/night/available'
+  // #swagger.tags = ['Surgery']
+  // #swagger.path = '/surgery/available'
   // #swagger.parameters['date_start'] = {required: true, type: 'string', description: 'yyyy-mm-dd'}
   // #swagger.parameters['date_end'] = {required: true, type: 'string', description: 'yyyy-mm-dd'}
 
-  nightValidation.date(query('date_start')),
-  nightValidation.date(query('date_end')),
+  surgeryValidation.date(query('date_start')),
+  surgeryValidation.date(query('date_end')),
+  diseaseValidation.id(query('disease')),
   validation,
 
   async (req, res, next) => {
     try {
-      const nights = await prisma.night.findMany({where: {
+      const surgery = await prisma.surgery.findMany({where: {
+        diseaseId: String(req.query.disease),
         date: {
-          lte: req.query.date_end ? new Date(String(req.query.date_end)) : undefined,
-          gte: req.query.date_start ? new Date(String(req.query.date_start)) : undefined,
+          lte: new Date(String(req.query.date_end)),
+          gte: new Date(String(req.query.date_start)),
         },
       }});
 
       const bookings = await prisma.booking.findMany({where: {
         date_op: {
-          lte: req.query.date_end ? new Date(String(req.query.date_end)) : undefined,
-          gte: req.query.date_start ? new Date(String(req.query.date_start)) : undefined,
+          lte: new Date(String(req.query.date_end)),
+          gte: new Date(String(req.query.date_start)),
         },
       }});
 
@@ -143,9 +165,9 @@ router.get('/available',
         const date_night_max = new Date(book.date_night);
         date_night_max.setDate(date_night_max.getDate() + nights_count - 1);
 
-        nights.forEach((n) => {
-          if (date_night_min <= n.date && n.date <= date_night_max) {
-            n.capacity -= 1;
+        surgery.forEach((s) => {
+          if (date_night_min <= s.date && s.date <= date_night_max) {
+            s.capacity -= 1;
           }
         })
       })
@@ -155,10 +177,10 @@ router.get('/available',
       let nb_of_days = 0;
       for (var d = new Date(String(req.query.date_start)); d <= new Date(String(req.query.date_end)); d.setDate(d.getDate() + 1)) {
         let nightAtDate = false; 
-        for (let i = 0; i < nights.length; i++) {
-          const n = nights[i];
-          if (n.date.getTime() == d.getTime()) {
-            availability.push(n.capacity);
+        for (let i = 0; i < surgery.length; i++) {
+          const s = surgery[i];
+          if (s.date.getTime() == d.getTime()) {
+            availability.push(s.capacity);
             nightAtDate = true;
             break;
           }
